--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@
 
 body {background-image:url('https://f.cloud.github.com/assets/5040624/956956/f466ee94-0447-11e3-9bd9-1cbf8e04d383.jpg');
 }
+
+.container {
+         background-color DarkMagenta;
+}
