--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@ body {background-image:url('https://f.cloud.github.com/assets/5040624/956956/f46
 }
 
 .container {
-         background-color DarkMagenta;
+         background-color: DarkMagenta;
 }
