--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 @import url(bootstrap.css);
 
-body {background-image:url('https://f.cloud.github.com/assets/5040624/956956/f466ee94-0447-11e3-9bd9-1cbf8e04d383.jpg');
-}
-
-.container {
-         background-color: DarkMagenta;
+body {
+    background-color: Pink;
 }
