--- a/style.css
+++ b/style.css
@@ -41,8 +41,13 @@ body {
 .navbar .nav > .active > a:focus {
   color: #191919;
 }
+<img src="https://f.cloud.github.com/assets/5040624/957227/fafb024a-044c-11e3-921b-0c43fe4974cb.jpg"/>
 
-h3 {
+
+
+ {
 border-style:solid;
 border-color:black;
 }
+
+
