--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
 .container {
          background-color: PaleVioletRed;
          padding-left: 50px;
+         border-style: solid;
+         border-color: PaleVioletRed;
+         
 }
 
 .navbar-inner {
