--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 .container {
          background-color: PaleVioletRed;
          padding-left: 75px;
+         padding-right: 75px;
          
 }
 
